# golxx

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: default.vert
include/golxx/: application.h  camera.h  config_manager.h  engine.h  fps_counter.h  game.h  game_object.h  gl_common.h  glm_common.h  grid_renderer.h  input.h  player.h  simulator.h  time_manager.h
src/: CMakeLists.txt  application.cpp  application.hpp  attribute_layout.hpp  buffer_usage.hpp  button_code.hpp  files.cpp  files.hpp  game.cpp  game.hpp  gl_common.hpp  glm_common.hpp  key_code.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh_manager.cpp  mesh_manager.hpp  not_defined.hpp  shader.cpp  shader.hpp  shader_manager.cpp  shader_manager.hpp
src/golxx/: application.cpp  config_manager.cpp  engine.cpp  game.cpp  grid_renderer.cpp  input.cpp  player.cpp  simulator.cpp
